Atualizando o server para deploy na AWS

--- a/views/index.html
+++ b/views/index.html
@@ -234,7 +234,7 @@
             };
 
             try {
-                const response = await fetch('http://localhost:3000/save', {
+                const response = await fetch('http://54.163.125.192:3000/save', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
